<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/profile">
        <ListPreference
            app:defaultValue="school"
            app:entries="@array/under_name_data_values"
            app:entryValues="@array/under_name_data_keys"
            app:key="data_under_name"
            app:title="@string/data_under_name"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="show_rating"
            app:title="@string/show_rating" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="show_rating"
            app:enabled="true"
            app:key="show_rating_background"
            app:summary="@string/rating_background_info"
            app:title="@string/show_rating_background" />
    </PreferenceCategory>

</PreferenceScreen>