<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/diaryPage"
        android:icon="@drawable/ic_round_menu_book_24"
        android:title="@string/diary" />
    <!--    <item-->
    <!--        android:id="@+id/chatsPage"-->
    <!--        android:icon="@drawable/ic_round_forum_24"-->
    <!--        android:title="@string/chats" />-->
    <item
        android:id="@+id/dashboardPage"
        android:icon="@drawable/ic_round_dashboard_24"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/periodMarksPage"
        android:icon="@drawable/ic_round_timeline_24"
        android:title="@string/marks" />
    <item
        android:id="@+id/profilePage"
        android:icon="@drawable/ic_round_account_circle_24"
        android:title="@string/profile" />
</menu>