<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/back"
        app:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/material_dynamic_neutral30"
        app:srcCompat="@drawable/ic_round_arrow_back_24"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lesson_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_dynamic_neutral80"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@id/lesson_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/placeholder_lesson_name" />

    <TextView
        android:id="@+id/lesson_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_dynamic_neutral80"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@id/homework_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lesson_name"
        tools:text="@string/placeholder_day" />

    <TextView
        android:id="@+id/homework_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/material_dynamic_neutral80"
        android:textIsSelectable="false"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lesson_date"
        tools:text="@string/placeholder_lesson_desc" />

    <TextClock
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:format12Hour="H\nmm"
        android:format24Hour="H\nmm"
        android:lineSpacingExtra="-32sp"
        android:textSize="128sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/placeholder_time" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/previous"
        android:visibility="gone"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/play_pause"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clock"
        app:rippleColor="@color/material_dynamic_neutral30"
        app:srcCompat="@drawable/ic_round_skip_previous_24"
        app:tint="@color/white"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pause"
        android:visibility="gone"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/next"
        app:layout_constraintStart_toEndOf="@id/previous"
        app:layout_constraintTop_toBottomOf="@+id/clock"
        app:rippleColor="@android:color/darker_gray"
        app:srcCompat="@drawable/ic_round_pause_24"
        app:tint="@color/black"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next"
        android:visibility="gone"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/play_pause"
        app:layout_constraintTop_toBottomOf="@+id/clock"
        app:rippleColor="@color/material_dynamic_neutral30"
        app:srcCompat="@drawable/ic_round_skip_next_24"
        app:tint="@color/white"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>